# ase-paraview

./: .gitignore  pyproject.toml
src/ase_paraview/: __init__.py  plugin.py
src/ase_paraview/viewer/: __init__.py  plugin.py
tests/: test_plugin.py
