[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ase-paraview"
version = "0.0.1"
authors = [
    { name = "Andrei Sobolev", email = "sobolev@ms1p.org" }
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
      "ase",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.entry-points.'ase.visualize']
paraview = 'ase_paraview.viewer:V3ParaviewViewer'

[project.entry-points.'ase.plugins']
paraview-v4 = 'ase_paraview'

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pre-commit",
] # Deps for development

[tool.setuptools.packages]
find = {where = ["src"]}

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = ["D100", "PLR0912", "PLR0913", "PLR0915"]
select = [
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # pycodestyle error
  "EXE",    # flake8-executable
  "F",      # pyflakes
  "FA",     # flake8-future-annotations
  "FBT003", # boolean-positional-value-in-call
  "FLY",    # flynt
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PYI",    # flakes8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific rules
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "TCH",    # flake8-type-checking
  "TID",    # tidy imports
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # pycodestyle warning
  "YTT",    # flake8-2020
]

pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PLR"]
